--- a/src/css/theme/default.css
+++ b/src/css/theme/default.css
@@ -38,6 +38,10 @@
     overflow: hidden !important;
 }
 
+.input-card input{
+    cursor: pointer;
+}
+
 .input-component {
     font-size: 16px !important;
     line-height: 22px !important;
