--- a/src/css/theme/default.css
+++ b/src/css/theme/default.css
@@ -22,7 +22,7 @@
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
     color: rgb(72, 72, 72) !important;
     background-color: rgb(255, 255, 255) !important;
-    margin-bottom: 8px !important;
+    /* margin-bottom: 8px !important; */
     position: relative !important;
     z-index: 0 !important;
     display: block !important;
